--- a/index.html
+++ b/index.html
@@ -57,6 +57,48 @@
                     </div>
             </div>
             </section>
+
+            <section class="section-feature">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+                            <p class="feature-box__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea a, mollitia sint autem alias nihil .
+                            </p>
+                        </div>                       
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                            <p class="feature-box__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea a, mollitia sint autem alias nihil .
+                            </p>
+                        </div>                                                                  
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Find Your way</h3>
+                            <p class="feature-box__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea a, mollitia sint autem alias nihil .
+                            </p>
+                        </div>                                                                  
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                            <p class="feature-box__paragraph">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea a, mollitia sint autem alias nihil .
+                            </p>
+                        </div>                                                                  
+                    </div>
+                </div>
+              
+            </section>
         </main>
 
         
