--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="navigation__background"> &nbsp; </div>
             <nav class="navigation__nav">
              <ul class="navigation__list">
-                 <li class="navigation__item"><a href="#" class="navigation__link">About Natous</a></li>
-                 <li class="navigation__item"><a href="#" class="navigation__link">Your Benifits</a></li>
-                 <li class="navigation__item"><a href="#" class="navigation__link">Popular Tours</a></li>
-                 <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
-                 <li class="navigation__item"><a href="#" class="navigation__link">Book Now</a></li>
+                 <li class="navigation__item"><a href="#section-about" class="navigation__link">About Natous</a></li>
+                 <li class="navigation__item"><a href="#section-feature" class="navigation__link">Your Benifits</a></li>
+                 <li class="navigation__item"><a href="#section-tours" class="navigation__link">Popular Tours</a></li>
+                 <li class="navigation__item"><a href="#section-stories" class="navigation__link">Stories</a></li>
+                 <li class="navigation__item"><a href="#section-book" class="navigation__link">Book Now</a></li>
              </ul>
             </nav>
      
@@ -51,7 +51,7 @@
         
         <main>
             <!-- section about -->
-            <section class="section-about">
+            <section class="section-about" id="section-about">
                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Exciting Tours for adventurous people
@@ -98,7 +98,7 @@
             </section>
 
              <!-- section feature -->
-            <section class="section-feature">
+            <section class="section-feature" id="section-feature">
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="feature-box">
@@ -248,7 +248,7 @@
              </section>
 
              <!-- section stories -->
-             <section class="section-stories">
+             <section class="section-stories" id="section-stories">
                 <div class="bg-video">
                     <video  class="bg-video__content" autoplay muted loop>
                         <source src="img/video.mp4" type="video/mp4">
@@ -290,7 +290,7 @@
              </div>
              </section>
 
-             <section class="section-book">
+             <section class="section-book" id="section-book">
                 <div class="row">
                     <div class="book">
                         <div class="book__form">
